# llm-classifier-bakeoff

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: lint.yml  test.yml
analysis/: __init__.py  per_label.py  plots.py  reports.py  significance.py
data/: __init__.py  banking77.py
eval/: __init__.py  metrics.py  run_eval.py
infra/: __init__.py  cache.py  pricing.py  registry.py
methods/: __init__.py  base.py  embedding_knn.py  few_shot.py  retrieval_augmented.py  setfit_classifier.py  zero_shot.py
providers/: __init__.py  anthropic_provider.py  base.py  cached.py  gemini_provider.py  openai_provider.py
tests/: test_cache.py  test_metrics.py  test_per_label.py  test_registry.py  test_significance.py  test_zero_shot.py
