[project]
name = "llm-classifier-bakeoff"
version = "0.1.0"
description = "Banking77 LLM classifier bake-off: zero-shot, retrieval-augmented, few-shot, fine-tuned, and kNN."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "google-genai>=0.3.0",
    "sentence-transformers>=3.0.0",
    "datasets>=3.0.0",
    "scikit-learn>=1.5.0",
    "scipy>=1.13.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "seaborn>=0.13.0",
    "python-dotenv>=1.0.0",
    "diskcache>=5.6.0",
    "tqdm>=4.66.0",
    "matplotlib>=3.9.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.6.0",
    "ipykernel>=6.29.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]